--- a/.github/workflows/sync-fork_winget-pkgs.yml
+++ b/.github/workflows/sync-fork_winget-pkgs.yml
@@ -2,7 +2,7 @@ name: Sync microsoft/winget-pkgs
 
 on:
   schedule:
-    - cron '0 */12 * * *'
+    - cron: '0 */12 * * *'
   workflow_dispatch:
 
 jobs:
