--- a/.github/workflows/prepare-new-version-winget-pr_gruntwork-terragrunt.yml
+++ b/.github/workflows/prepare-new-version-winget-pr_gruntwork-terragrunt.yml
@@ -7,7 +7,10 @@ jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-      - run: gh workflow run sync-fork_winget-pkgs.yml
+      - name: SYNC_WINGET_PKGS
+        shell: bash
+        run: |
+          gh workflow run sync-fork_winget-pkgs.yml
         env:
           GH_TOKEN: ${{ secrets.WORKFLOW_RUN_TOKEN }}
 
